fix for native image problem with JDK 17