@@ -19,3 +19,9 @@ dependencies {
     testImplementation mn.micronaut.http.client
     testImplementation libs.testcontainers.spock
 }
+
+graalvmNative {
+    binaries.configureEach {
+        buildArgs.add '-J--add-exports=java.management/sun.management=ALL-UNNAMED' // https://github.com/oracle/graal/issues/3875
+    }
+}
